# dead-rising-save-converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: FORMAT.md
src/dr2otr_save_converter/: __init__.py  __main__.py  cli.py  converter.py  format.py  schema.py
tests/: test_converter.py
