[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dr2otr-save-converter"
version = "0.1.0"
description = "Convert Dead Rising 2: Off the Record Xenia Story Mode saves to native PC"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["dead-rising", "xenia", "save-converter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities",
]

[project.scripts]
dr2otr-save = "dr2otr_save_converter.cli:main"

[project.urls]
Homepage = "https://github.com/jaypfe/dead-rising-save-converter"
Issues = "https://github.com/jaypfe/dead-rising-save-converter/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
